Fix z-index and overflow: hidden;

--- a/extension/cheatsheet.css
+++ b/extension/cheatsheet.css
@@ -4,7 +4,7 @@
   bottom: 0;
   left: 7%;
   background-color: #CCC;
-  overflow: hidden
+  overflow: hidden;
   -webkit-border-top-left-radius: 8px;
   -webkit-border-top-right-radius: 8px;
   -moz-border-radius-topleft: 8px;
@@ -13,6 +13,7 @@
   border-top-right-radius: 8px;
   font-family: Helvetica,Arail,sans-serif;
   color: #383838;
+  z-index: 1000;
 
   /** Transition stuff **/
   height: 0;
